! The support block in the admin sidebar shouldn't be linked to anything now, especially not a page that doesn't exist any more. (Admin.template.php) ! Minor layout fix to the items in the admin area, it was bugging me how everything was misaligned. (Yes, the placeholder icons are *still* misaligned, but they're not my main problem!) (admin.css) ! The feed block in the sidebar should have more spacing than it did. (index.css)

--- a/Themes/default/styles/admin.css
+++ b/Themes/default/styles/admin.css
@@ -62,6 +62,7 @@ ol.search_results
 	width: 100px
 	font-size: 85%
 	text-align: center
+	vertical-align: top
 
 #wedge_news
 	overflow-y: auto
