--- a/Themes/default/styles/index.css
+++ b/Themes/default/styles/index.css
@@ -103,6 +103,10 @@ body
 			margin: 0 0 2px 0
 			padding: 0
 
+#feed
+	overflow: hidden
+	margin: 1em 0
+
 ul#noava
 	margin: 0
 
